Create Chefs and Recipes associations and tests

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,23 @@
 == README
+testing Specs for Recipes
+recipename: string
+summary: text
+description: text
+
+- name must be present
+- name must be between 5 characters and less than 100 characters
+- summary must be present
+- summary must be between 10 and 150 words
+- description must be present
+- description must be between 20 and 500 words
+
+testing Specs for Chef
+chefname: string
+email: string 
+
+
+- chefname must be present
+- chefname must be between 3 and 40 characters
+- email must be present
+- email must be unique(since we will use this for login later)
+- email must be valid
